@@ -183,6 +183,7 @@ There are also many improvements to the documentation both under the hood and in
  * Simplify page chooser views by converting to class-based views (Matt Westcott)
  * Add reference documentation and snippets usage guide for `RevisionMixin`, `DraftStateMixin`, and `PreviewableMixin` (Sage Abdullah)
  * Add "Translate" button within pages’ Actions dropdown when editing pages (Sage Abdullah)
+ * Add translated labels to the bulk actions tags and collections bulk update fields (Stefan Hammer)
 
 ### Bug fixes
 
