@@ -111,8 +111,9 @@ Changelog
  * Simplify page chooser views by converting to class-based views (Matt Westcott)
  * Add reference documentation and snippets usage guide for `RevisionMixin`, `DraftStateMixin`, and `PreviewableMixin` (Sage Abdullah)
  * Add "Translate" button within pages’ Actions dropdown when editing pages (Sage Abdullah)
+ * Add translated labels to the bulk actions tags and collections bulk update fields (Stefan Hammer)
  * Fix: Typo in `ResumeWorkflowActionFormatter` message (Stefan Hammer)
- * Fix issue where `ModelAdmin` index listings with export list enabled would show buttons with an incorrect layout (Josh Woodcock)
+ * Fix: Issue where `ModelAdmin` index listings with export list enabled would show buttons with an incorrect layout (Josh Woodcock)
  * Fix: Throw a meaningful error when saving an image to an unrecognised image format (Christian Franke)
  * Fix: Remove extra padding for headers with breadcrumbs on mobile viewport (Steven Steinwand)
  * Fix: Ensure that custom document or image models support custom tag models (Matt Westcott)
